blackroad-sf/force-app/main/default/objects/AgentTrainingEvent__e/AgentTrainingEvent__e.object-meta.xml
<CustomObject>
    <label>Agent Training Event</label>
    <pluralLabel>Agent Training Events</pluralLabel>
</CustomObject>