blackroad-sf/force-app/main/default/objects/AgentTrainingEvent__e/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>Agent ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>