blackroad-sf/force-app/main/default/objects/AgentTrainingEvent__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>