blackroad-sf/force-app/main/default/objects/AgentTrainingEvent__e/fields/DataPath__c.field-meta.xml
<CustomField>
    <fullName>DataPath__c</fullName>
    <label>Data Path</label>
    <type>Text</type>
    <length>255</length>
</CustomField>